small fixes e.g. z-index header

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ header {
     font-size: 18px;
     color: #333;
     line-height: 1;
+    z-index: 100;
 }
 
 a {
