--- a/css/menu.css
+++ b/css/menu.css
@@ -5,7 +5,6 @@ header {
     width: 100%;
     background-color: white;
     text-align: left;
-    z-index: 10;
     -webkit-box-shadow: 0px 0px 4px 0px #cacfd3;
     -moz-box-shadow: 0px 0px 4px 0px #cacfd3;
     box-shadow: 0px 0px 4px 0px #cacfd3;
